--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
     "name": "Personal Dashboard",
-    "version": "1.0.0",
-    "description": "Just for practicing async JS",
+    "version": "0.1.0",
+    "description": "Just for practicing async JS and promises",
     "action": {
         "default_icon": "icon.png"
     },
